hphp/test/zend/good/ext/mbstring/tests/mb_ereg_replace_variation1.php.expectf
*** Testing mb_ereg_replace() : usage variations ***

-- Iteration 1 --
string(10) "string_val"

-- Iteration 2 --
string(10) "string_val"

-- Iteration 3 --
string(10) "string_val"

-- Iteration 4 --

Warning: mbregex compile err: invalid code point value in %s/mb_ereg_replace_variation1.php on line %d
bool(false)

-- Iteration 5 --
string(10) "string_val"

-- Iteration 6 --

Warning: mbregex compile err: invalid code point value in %s/mb_ereg_replace_variation1.php on line %d
bool(false)

-- Iteration 7 --
string(10) "string_val"

-- Iteration 8 --
string(10) "string_val"

-- Iteration 9 --
string(10) "string_val"

-- Iteration 10 --
string(10) "string_val"

-- Iteration 11 --
string(10) "string_val"

-- Iteration 12 --
string(10) "string_val"

-- Iteration 13 --
string(10) "string_val"

-- Iteration 14 --
string(10) "string_val"

-- Iteration 15 --
string(10) "string_val"

-- Iteration 16 --
string(120) "string_valsstring_valtstring_valrstring_valistring_valnstring_valgstring_val_string_valvstring_valastring_vallstring_val"

-- Iteration 17 --
string(120) "string_valsstring_valtstring_valrstring_valistring_valnstring_valgstring_val_string_valvstring_valastring_vallstring_val"

-- Iteration 18 --
string(10) "string_val"

-- Iteration 19 --
string(10) "string_val"

-- Iteration 20 --
string(10) "string_val"

-- Iteration 21 --

Fatal error: Uncaught exception 'TypecastException' with message 'Object of class classA could not be converted to int' in %s/mb_ereg_replace_variation1.php:76
Stack trace:
#0 %s/mb_ereg_replace_variation1.php(76): mb_ereg_replace()
#1 (): main()
#2 {main}
